infra/security-group.tf
resource "aws_security_group" "node1" {
  name_prefix = "node1"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
        "10.0.0.0/8",
    ]
  }
}

resource "aws_security_group" "node2" {
  name_prefix = "node2"
  vpc_id = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
        "192.168.0.0/16",
    ]
  }
}

resource "aws_security_group" "node" {
  name_prefix = "node"
  vpc_id = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"

    cidr_blocks = [
        "10.0.0.0/8",
        "172.16.0.0/12",
        "192.168.0.0/16"
    ]
  }
}
